--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
 
     <link rel="icon" type="image/png" href="assets/icons/b.ico" sizes="32x32">
 
-    <style>
-        #img{
-            width: 250px;
-            border-radius: 20%;
-        }
-    </style>
-
 </head>
 <body>
 
     <hr>
         <a href="index.html" target="_black">Hone</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" target="blank">Contact</a>
+        <a href="gallery.html" target="_blank">Gallery</a>
     <hr>
 
     <table cellspacing='10'>
@@ -77,47 +71,29 @@
 
     <h3>Work Experiance</h3>
 
-    <table>
-        <th>Date</th>
-        <th>Job</th>
+    <table cellspacing="10">
+        <tr>
+            <th>Date</th>
+            <th>Job</th>
+        </tr>
+        <tr>
+            <td>Last Year</td>
+            <td>Last Job</td>
+        </tr>
     </table>
     
     <hr>
 
-    <h3>Contact Us</h3>
-    <form action="" method="" enctype="utf-8">
-        <label for="fname">First Name:</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="text" name="fname" id="fname" required><br>
-        <label for="lname">Last Name:</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="text" name="lname" id="lname" required><br>
-        <label for="email">Email:</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="email" name="email" id="email" required><br>
-        Country:&nbsp;&nbsp;&nbsp;&nbsp;
-        <select name="Country" id="">
-            <option value="af">Africa</option>
-            <option value="am">America</option>
-            <option value="eu">Europe</option>
-        </select>
-        <br>
-        <label for="comment">Leave Your Comment Here:</label><br>
-        <textarea name="comment" id="comment" cols="30" rows="10" required></textarea><br>
-        <input type="submit" value="Submit">
-    </form>
-
-    
-
-
-
-
-
 </body>
+<footer>
 
-<hr>
-    <a href="" target="_black">Facebook</a>
-    <a href="" target="_black">Twitter</a>
-<hr>
+    <hr>
+        <a href="" target="_black">Facebook</a>
+        <a href="" target="_black">Twitter</a>
+    <hr>
 
-<p style="text-align: center;">Developed By Bisrat F. &copy; 2020</p>
-<hr>
+    <p align='center'>Developed By Bisrat F. &copy; 2020</p>
+    <hr>
+</footer>
 
 </html>
