Made Minor Changes.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
     <hr>
-        <a href="index.html">Hone</a> &nbsp;
-        <a href="contact.html" target="blank">Contact</a> &nbsp;
-        <a href="gallery.html" target="_blank">Gallery</a> &nbsp;
+        <a href="index.html">Home</a> &nbsp;
+        <a href="contact.html">Contact</a> &nbsp;
+        <a href="gallery.html">Gallery</a> &nbsp;
     <hr color="black">
 
     <br><br><br>
