--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <hr>
-    <a href="index.html" target="_blank">Hone</a> &nbsp;
+    <a href="index.html">Home</a> &nbsp;
     <a href="contact.html">Contact</a> &nbsp;
-    <a href="gallery.html" target="_blank">Gallery</a>
+    <a href="gallery.html">Gallery</a>
     <hr>
     
     <br><br>
