Made Minor Changes

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <hr>
-    <a href="index.html">Home</a> &nbsp;
-    <a href="contact.html">Contact</a> &nbsp;
-    <a href="gallery.html">Gallery</a>
+    <a href="index.html">Home</a> &nbsp; |
+    <a href="contact.html">Contact</a> &nbsp; |
+    <a href="gallery.html">Gallery</a> 
     <hr>
     
     <br><br>
@@ -119,8 +119,9 @@
 <footer>
 
     <hr>
-        <a href="" target="_blank">Facebook</a>
-        <a href="" target="_blank">Twitter</a>
+        <a href="" target="_blank">Facebook</a> &nbsp; |
+        <a href="" target="_blank">Twitter</a> &nbsp; |
+        <a href="https:/t.me/PsychoDud">Telegram</a> &nbsp; 
     <hr>
 
     <p align='center'>Developed By Bisrat F. &copy; 2020</p>
