--- a/gallery.html
+++ b/gallery.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <hr>
-        <a href="index.html">Home</a> &nbsp;
-        <a href="contact.html">Contact</a> &nbsp;
-        <a href="gallery.html">Gallery</a>
+        <a href="index.html">Home</a> &nbsp; |
+        <a href="contact.html">Contact</a> &nbsp; | 
+        <a href="gallery.html">Gallery</a> 
         <hr color="black">
 
         <br><br><br>
@@ -37,7 +37,7 @@
                     <img src="https://images.pexels.com/photos/3639542/pexels-photo-3639542.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Bike Parked Beside A Building" >
                 </figure>
                 <figcaption align='center'>
-                    Extniction
+                    Bicycle Leaned On A Building
                 </figcaption>
             </td>
             
@@ -77,7 +77,7 @@
                     <img src="https://images.pexels.com/photos/2772854/pexels-photo-2772854.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Low Angle Photo of Tall Plants" >
                 </figure>
                 <figcaption align='center'>
-                    Low Angle Photo of Tall PLants 
+                    Low Angle Photo of Tall Plants 
                 </figcaption>
             </td>
 
@@ -129,8 +129,9 @@
 <footer>
 
     <hr>
-        <a href="" target="_blank">Facebook</a>
-        <a href="" target="_blank">Twitter</a>
+        <a href="" target="_blank">Facebook</a> &nbsp; |
+        <a href="" target="_blank">Twitter</a> &nbsp; |
+        <a href="https:/t.me/PsychoDud">Telegram</a> &nbsp; 
     <hr>
 
     <p align='center'>Developed By Bisrat F. &copy; 2020</p>
