--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
     <hr>
-        <a href="index.html">Home</a> &nbsp;
-        <a href="contact.html">Contact</a> &nbsp;
-        <a href="gallery.html">Gallery</a> &nbsp;
+        <a href="index.html">Home</a> &nbsp; |
+        <a href="contact.html">Contact</a> &nbsp; |
+        <a href="gallery.html">Gallery</a> &nbsp; 
     <hr color="black">
 
     <br><br><br>
@@ -123,8 +123,9 @@
 <footer>
 
     <hr>
-        <a href="" target="_black">Facebook</a>
-        <a href="" target="_black">Twitter</a>
+        <a href="" target="_black">Facebook</a> &nbsp; |
+        <a href="" target="_black">Twitter</a> &nbsp; |
+        <a href="https:/t.me/PsychoDud">Telegram</a> &nbsp; 
     <hr>
 
     <p align='center'>Developed By Bisrat F. &copy; 2020</p>
